--- a/server/views/curfew/curfewHours.pug
+++ b/server/views/curfew/curfewHours.pug
@@ -81,5 +81,5 @@ block content
                                             div.l-box.l-box--no-left
                                                 span.hours-text hours the following morning
 
-        include ../includes/formButtons
+        include ../includes/saveAndReturn
 
