--- a/server/views/reporting/reportingInstructions.pug
+++ b/server/views/reporting/reportingInstructions.pug
@@ -42,5 +42,5 @@ block content
                                     label.form-label(for="telephone") Telephone
                                     input#telephone.form-control.small(name="telephone" type="text" value=data.telephone)
 
-        include ../includes/formButtons
+        include ../includes/saveAndReturn
 
