--- a/server/views/risk/riskManagement.pug
+++ b/server/views/risk/riskManagement.pug
@@ -65,4 +65,4 @@ block content
                         if data.victimLiaisonDetails
                             | #{data.victimLiaisonDetails}
 
-            include ../includes/formButtons
+            include ../includes/saveAndReturn
