--- a/server/views/licenceConditions/conditionsSummary.pug
+++ b/server/views/licenceConditions/conditionsSummary.pug
@@ -20,5 +20,4 @@ block content
 
     div.paddingBottom.smallPaddingTop
         div.pure-u-1.inlineButtons
-            a#continueBtn.requiredButton.button.smallMarginTop(href=nextPath.path + nomisId role="button") Save and continue
-            a#backBtn.requiredButton.button.button-secondary.smallMarginTop(href="/hdc/taskList/" + nomisId role="button") Return to task list
+            a#continueBtn.requiredButton.button.smallMarginTop(href=nextPath.path + nomisId role="button") Save and return to task list
