added licence review before submission for RO

--- a/server/views/review/licenceDetails.pug
+++ b/server/views/review/licenceDetails.pug
@@ -9,6 +9,5 @@ block content
 
     div.paddingBottom.smallPaddingTop
         div.pure-u-1.inlineButtons
-            a#continueBtn.button.button-primary.smallMarginTop(href="/hdc/taskList/" + nomisId role="button")
-                | Save and continue
-            a#backBtn.requiredButton.button.button-secondary.smallMarginTop(href="/hdc/taskList/" + nomisId role="button") Return to task list
+            a#continueBtn.button.button-primary.smallMarginTop(href="/hdc/send/" + nomisId role="button")
+                | Continue
