--- a/server/views/taskList/roSubmitTask.pug
+++ b/server/views/taskList/roSubmitTask.pug
@@ -13,6 +13,6 @@ div.taskListItem.submit
         div.pure-u-1-4
             if licenceStatus.stage === 'PROCESSING_RO'
                 //- && allowedTransitions.roToCa
-                a.taskListAction.center.button(href="/hdc/send/" + prisonerInfo.offenderNo)
+                a.taskListAction.center.button(href="/hdc/review/licenceDetails/" + prisonerInfo.offenderNo)
                     | Continue
 
