added nta font to secondary buttons

--- a/assets/sass/application.scss
+++ b/assets/sass/application.scss
@@ -16,6 +16,7 @@ $path: "/public/images/";
 }
 
 .button.button-secondary {
+    font-family: "nta",Arial,sans-serif;
     color: $black;
     background-color: $grey-3;
     min-width: 120px;
