--- a/server/views/taskList/prisonerDetails.pug
+++ b/server/views/taskList/prisonerDetails.pug
@@ -53,19 +53,19 @@ div#personalDetails.pure-g.borderBottom.paddingBottom
             if (prisonerInfo.homeDetentionCurfewEligibilityDate)
                 span#prisonerHdced.block.bold  #{prisonerInfo.homeDetentionCurfewEligibilityDate}
 
-        div.midMarginBottom
-            | Sentence Expiry Date
-            if (prisonerInfo.sentenceExpiryDate)
+        if (prisonerInfo.sentenceExpiryDate && prisonerInfo.sentenceExpiryDate !== 'Invalid date')
+            div.midMarginBottom
+                | Sentence Expiry Date
                 span#prisonerSed.block.bold  #{prisonerInfo.sentenceExpiryDate}
 
-        div.midMarginBottom
-            | Licence Expiry Date
-            if (prisonerInfo.licenceExpiryDate)
+        if (prisonerInfo.licenceExpiryDate && prisonerInfo.licenceExpiryDate !== 'Invalid date')
+            div.midMarginBottom
+                | Licence Expiry Date
                 span#prisonerLed.block.bold  #{prisonerInfo.licenceExpiryDate}
 
-        div.midMarginBottom
-            | Post Sentence Supervision Expiry Date
-            if (prisonerInfo.topupSupervisionExpiryDate)
+        if (prisonerInfo.topupSupervisionExpiryDate && prisonerInfo.topupSupervisionExpiryDate !== 'Invalid date')
+            div.midMarginBottom
+                | Post Sentence Supervision Expiry Date
                 span#prisonerPssed.block.bold  #{prisonerInfo.topupSupervisionExpiryDate}
 
 
