--- a/server/views/reporting/reportingInstructions.pug
+++ b/server/views/reporting/reportingInstructions.pug
@@ -2,9 +2,7 @@ extends ../layout
 
 block content
 
-    div.pure-g.pure-u-1
-        div.back-link-container.smallPaddingTop
-            a.link-back(href="javascript: window.history.back();") Back
+    include ../includes/backToTaskList
 
     h2.heading-large Reporting instructions
     p Enter the details of where the offender should report
