--- a/server/views/curfew/addressSafety.pug
+++ b/server/views/curfew/addressSafety.pug
@@ -9,8 +9,7 @@ block content
 
     div.pure-g.pure-u-1
         div.borderBottomLight
-            div.back-link-container.smallPaddingTop
-                a.link-back(href="javascript: window.history.back();") Back
+            include ../includes/backToTaskList
 
             h2.heading-large Proposed address decision
 
