--- a/server/views/curfew/curfewHours.pug
+++ b/server/views/curfew/curfewHours.pug
@@ -3,8 +3,7 @@ extends ../layout
 block content
     -var daysInAWeek = ["monday", "tuesday", "wednesday", "thursday", "friday", "saturday", "sunday"]
 
-    div.back-link-container.smallPaddingTop
-        a.link-back(href="javascript: window.history.back();") Back
+    include ../includes/backToTaskList
 
     h2.heading-large Curfew hours
     h2.heading-medium.smallMarginTop First night curfew hours
