--- a/server/views/risk/riskManagement.pug
+++ b/server/views/risk/riskManagement.pug
@@ -3,8 +3,7 @@ extends ../layout
 block content
 
     div.pure-g.pure-u-1
-        div.back-link-container.smallPaddingTop
-            a.link-back(href="javascript: window.history.back();") Back
+        include ../includes/backToTaskList
 
         h2.heading-large Risk management and victim liaison
 
