--- a/server/views/finalChecks/seriousOffence.pug
+++ b/server/views/finalChecks/seriousOffence.pug
@@ -5,8 +5,7 @@ block content
     - var seriousOffenceValue = data.decision || null;
 
     div.pure-g.pure-u-1
-        div.back-link-container.smallPaddingTop
-            a.link-back(href="javascript: window.history.back();") Back
+        include ../includes/backToTaskList
 
         div.pure-u-2-3
             h2.heading-large Is the offender under investigation, or been charged, for a serious offence committed during the current sentence?
@@ -28,4 +27,3 @@ block content
             div.paddingBottom.smallPaddingTop
                 div.pure-u-1.inlineButtons
                     input#continueBtn.requiredButton.button(type="submit" value="Save and continue")
-                    a#backBtn.requiredButton.button.button-secondary(href="/hdc/taskList/" + nomisId role="button") Return to tasklist
