--- a/server/views/approval/release.pug
+++ b/server/views/approval/release.pug
@@ -5,8 +5,7 @@ block content
     - var releaseValue = data.decision || null;
 
     div.pure-g.pure-u-1
-        div.back-link-container.smallPaddingTop
-            a.link-back(href="javascript: window.history.back();") Back
+        include ../includes/backToCheckList
 
         div.pure-u-2-3
             h2.heading-large HDC release decision
@@ -31,4 +30,3 @@ block content
             div.paddingBottom.smallPaddingTop
                 div.pure-u-1.inlineButtons
                     input#continueBtn.requiredButton.button(type="submit" value="Save and continue")
-                    a#backBtn.requiredButton.button.button-secondary(href="/hdc/taskList/" + nomisId role="button") Return to tasklist
