--- a/server/views/licenceConditions/standard.pug
+++ b/server/views/licenceConditions/standard.pug
@@ -10,7 +10,7 @@ block content
 
     div.pure-g.paddingBottom
         div.pure-u-2-3
-            P The following conditions are included on the licence as a baseline.
+            P The following conditions are included on the licence as standard.
 
             p An offender must:
 
