--- a/server/views/sent/index.pug
+++ b/server/views/sent/index.pug
@@ -19,7 +19,7 @@ block content
                             div.heading-large Licence information sent
 
                         else if user.role == 'DM'
-                            div.heading-large Submitted to the OMU team
+                            div.heading-large Submitted to the prison case admin
 
     div
         a#backBtn.requiredButton.button.button-secondary.largeMarginBottom(href='/' role="button") Return to case list
