--- a/assets/sass/application.scss
+++ b/assets/sass/application.scss
@@ -114,7 +114,6 @@ $path: "/public/images/";
         padding-top: 10px;
         padding-bottom: 10px;
         margin: 0;
-        border-bottom: solid $grey-2 1px;
     }
     .pure-g {
         padding: 15px 0;
@@ -425,4 +424,8 @@ a.namedAnchor {
 .button-start-height {
     line-height: 1.55em;
     margin-left: 15px;
+}
+
+input[type="time"] {
+    width: 90px
 }
