--- a/server/views/taskList/finalChecksTask.pug
+++ b/server/views/taskList/finalChecksTask.pug
@@ -1,7 +1,5 @@
-div.largeMarginBottom.borderTop
+div.taskListItem.smallPaddingBottom
     h2.heading-medium Final checks
-
-    div.borderBottomLight.largeMarginBottom
 
     div.pure-g
         div.pure-u-1-2
