--- a/server/views/taskList/approvalTask.pug
+++ b/server/views/taskList/approvalTask.pug
@@ -1,7 +1,5 @@
-div.largeMarginBottom.borderTop
+div.taskListItem.largeMarginBottom
     h2.heading-medium Final decision
-
-    div.borderBottomLight.largeMarginBottom
 
     div.pure-g
         div.pure-u-3-4
