--- a/server/views/taskList/prisonerDetails.pug
+++ b/server/views/taskList/prisonerDetails.pug
@@ -1,15 +1,16 @@
 h2.heading-medium Offender details
 
 div#personalDetails.pure-g.borderBottom.paddingBottom
-    div.pure-u-1.pure-u-md-5-24
-        if prisonerInfo.imageId
-            img#prisonerImage.pure-img(src= "/hdc/taskList/image/" + prisonerInfo.imageId)
-        else
-            img#prisonerImage(src= "/public/images/placeholder.png")
-        if(prisonerInfo.captureDate)
-            span.block.subText#prisonerPhotoDate Uploaded: #{prisonerInfo.captureDate}
+    div.pure-u-1.pure-u-md-4-24
+        div.maxWidth.padd
+            if prisonerInfo.imageId
+                img#prisonerImage.pure-img(src= "/hdc/taskList/image/" + prisonerInfo.imageId)
+            else
+                img#prisonerImage(src= "/public/images/no-photo.png")
+            if(prisonerInfo.captureDate)
+        p.subText#prisonerPhotoDate Uploaded: #{prisonerInfo.captureDate}
 
-    div.pure-u-1.pure-u-md-4-24.padRight15
+    div.pure-u-1.pure-u-md-5-24.padRight15
         div.midMarginBottom
             | Name
             if(prisonerInfo.firstName || prisonerInfo.lastName)
@@ -25,7 +26,7 @@ div#personalDetails.pure-g.borderBottom.paddingBottom
             if(prisonerInfo.dateOfBirth)
                 span#prisonerDob.block.bold #{prisonerInfo.dateOfBirth}
 
-    div.pure-u-1.pure-u-md-9-24.padRight30
+    div.pure-u-1.pure-u-md-10-24.padRight30
         div.midMarginBottom
             | Name of RO
             if (prisonerInfo.com)
@@ -42,7 +43,7 @@ div#personalDetails.pure-g.borderBottom.paddingBottom
             if(prisonerInfo.offences)
                 span#prisonerOffences.block.bold #{prisonerInfo.offences}
 
-    div.pure-u-1.pure-u-md-6-24.padRight15
+    div.pure-u-1.pure-u-md-5-24
         div.midMarginBottom
             | Conditional Release Date
             if (prisonerInfo.conditionalReleaseDate)
