--- a/server/views/eligibility/includes/excluded.pug
+++ b/server/views/eligibility/includes/excluded.pug
@@ -20,6 +20,9 @@ block excludedForm
                 input(type='checkbox' name='reason' id='communityCurfew' value='communityCurfew' checked=vals.indexOf('communityCurfew') !== -1)
                 label(for='communityCurfew') Serving a sentence for breach of the curfew requirement of a
                     |  Community Order
+            div.multiple-choice
+                input(type='checkbox' name='reason' id='returnedAtRisk' value='returnedAtRisk' checked=vals.indexOf('returnedAtRisk') !== -1)
+                label(for='returnedAtRisk') Offender returned to custody during at risk period (Ref. P25 PSI Annex C)
         div.pure-u-4-24
         div.pure-u-10-24
             div.multiple-choice
