--- a/server/views/review/address.pug
+++ b/server/views/review/address.pug
@@ -5,7 +5,7 @@ block content
 
     -var review = data.curfew && data.curfew.curfewAddressReview ? data.curfew.curfewAddressReview : {}
     -var addressSafety = data.curfew && data.curfew.addressSafety ? data.curfew.addressSafety : {}
-    -var address = data.proposedAddress && data.proposedAddress.curfewAddress ? data.proposedAddress.curfewAddress.preferred : {}
+    -var address = data.proposedAddress && data.proposedAddress.curfewAddress ? data.proposedAddress.curfewAddress.addresses[0] : {}
 
     div.pure-g.pure-u-1
         div
@@ -19,3 +19,6 @@ block content
                 div.pure-u-1-2
 
                 +addressDetail('curfew', address, review, addressSafety)
+
+            else
+                p NO ADDRESS
