--- a/server/views/proposedAddress/includes/addressDetail.pug
+++ b/server/views/proposedAddress/includes/addressDetail.pug
@@ -3,32 +3,32 @@ mixin addressDetail(type, address, review, safety)
     -var addressReview = review || {}
     -var addressSafety = safety || {}
 
-    div.pure-g.smallPaddingBottom(id=type+"-addressDetails")
+    div.pure-g.smallPaddingBottom(id="addressDetails")
         div.pure-u-1.pure-u-sm-1-2.pure-g
             div.pure-u-md-2-3
                 | Address
                 div.paddingBottom.smallMarginTop
                     if address.addressLine1
-                        p.bold.noMargin(id=type+"-address1") #{address.addressLine1}
+                        p.bold.noMargin(id="address1-"+type) #{address.addressLine1}
                     if address.addressLine2
-                        p.bold.noMargin(id=type+"-address2") #{address.addressLine2}
+                        p.bold.noMargin(id="address2-"+type) #{address.addressLine2}
                     if address.addressTown
-                        p.bold.noMargin(id=type+"-town") #{address.addressTown}
+                        p.bold.noMargin(id="town-"+type) #{address.addressTown}
                     if address.postCode
-                        p.bold.noMargin(id=type+"-postCode") #{address.postCode}
+                        p.bold.noMargin(id="postCode-"+type) #{address.postCode}
 
             div.pure-u-md-2-3.largePaddingBottom
                 | Telephone
                 if address.telephone
-                    p.bold(id=type+"-telephone") #{address.telephone}
+                    p.bold(id="telephone-"+type) #{address.telephone}
 
         if address.occupier
             div.pure-u-1.pure-u-md-1-2
                 div Main occupier
                 div.pure-g.smallMarginTop.borderBottomLight.smallPaddingBottom
-                    p.bold.pure-u-1-2.noMargin(id=type+"-occupierName") #{address.occupier.name}
-                    p.bold.pure-u-1-3.noMargin(id=type+"-occupierRelation") #{address.occupier.relationship}
-                    p.bold.pure-u-4-24.noMargin(id=type+"-occupierAge") #{address.occupier.age}
+                    p.bold.pure-u-1-2.noMargin(id="occupierName-"+type) #{address.occupier.name}
+                    p.bold.pure-u-1-3.noMargin(id="occupierRelation-"+type) #{address.occupier.relationship}
+                    p.bold.pure-u-4-24.noMargin(id="occupierAge-"+type) #{address.occupier.age}
 
                 div.largePaddingBottom.smallPaddingTop
                     p Other residents
@@ -36,10 +36,10 @@ mixin addressDetail(type, address, review, safety)
                     if address.residents && address.residents.length > 0
                         for resident, index in address.residents
                             if(resident.name != '' || resident.age != '' || resident.relation != '')
-                                div.pure-g.smallMarginTop.resident(class = type)
-                                    p.bold.noMargin.pure-u-1-2(id=type+"-residentName-"+index) #{resident.name}
-                                    p.bold.noMargin.pure-u-1-3(id=type+"-residentRelation-"+index) #{resident.relation}
-                                    p.bold.noMargin.pure-u-4-24(id=type+"-residentAge-"+index) #{resident.age}
+                                div.pure-g.smallMarginTop.resident(class = "type"+type)
+                                    p.bold.noMargin.pure-u-1-2(id="residentName-"+type+"-"+index) #{resident.name}
+                                    p.bold.noMargin.pure-u-1-3(id="residentRelation-"+type+"-"+index) #{resident.relation}
+                                    p.bold.noMargin.pure-u-4-24(id="residentAge-"+type+"-"+index) #{resident.age}
 
                     else
                         div.pure-u-1
@@ -50,34 +50,34 @@ mixin addressDetail(type, address, review, safety)
                 div.pure-u-md-5-6
                     p According to the offender, have they been convicted or cautioned for an offence against any of the above, or any neighbours to the above address?
                     if address.cautionedAgainstResident
-                        p.bold(id=type+"-cautioned") #{address.cautionedAgainstResident}
+                        p.bold(id="cautioned-"+type) #{address.cautionedAgainstResident}
 
     if addressReview.consent
         div.pure-g.largeMarginTop.paddingTop.smallPaddingBottom.borderTopLight
             div.pure-u-1-2
                 div.pure-u-md-4-5
                     | Does the homeowner/landlord give informed consent to HDC at the address?
-                    p.bold(id=type + "-consent") #{addressReview.consent}
+                    p.bold(id="consent-"+type) #{addressReview.consent}
 
             if(addressReview.consent === 'Yes')
                 div.pure-u-1-2
                     if addressReview.electricity
                         div.pure-u-md-4-5.midPaddingBottom
                             | Does this address have an electricity supply?
-                            p.bold(id=type + "-electricity") #{addressReview.electricity}
+                            p.bold(id="electricity-"+type) #{addressReview.electricity}
 
                     if(addressReview.electricity === 'Yes')
                         if addressReview.homeVisitConducted
                             div.pure-u-md-4-5
                                 | Was a home visit conducted in this case?
-                                p.bold(id=type + "-homeVisit") #{addressReview.homeVisitConducted}
+                                p.bold(id="homeVisit-"+type) #{addressReview.homeVisitConducted}
 
             if(addressReview.consent === 'Yes' && addressReview.electricity !== 'No')
                 if addressSafety.deemedSafe
                     div.pure-u-1.largeMarginTop.paddingTop.borderTopLight
                         div.pure-u-md-4-5
                             | Could this offender be managed safely at this address?
-                            p.bold(id=type + "-deemedSafe") #{addressSafety.deemedSafe}
+                            p.bold(id="deemedSafe-"+type) #{addressSafety.deemedSafe}
 
             div.pure-u-1-2
 
