--- a/server/views/curfew/curfewAddressReview.pug
+++ b/server/views/curfew/curfewAddressReview.pug
@@ -3,8 +3,7 @@ include ../proposedAddress/includes/addressDetail
 
 block content
 
-    -var review = data.curfew && data.curfew.curfewAddressReview ? data.curfew.curfewAddressReview : {}
-    -var address = data.proposedAddress && data.proposedAddress.curfewAddress ? data.proposedAddress.curfewAddress.addresses[0] : {}
+    -var address = data.proposedAddress && data.proposedAddress.curfewAddress ? data.proposedAddress.curfewAddress.addresses[addressIndex] : {}
 
     div.pure-g.pure-u-1
         div.borderBottomLight
@@ -22,35 +21,36 @@ block content
         form(method="post")
             input(type="hidden" name="_csrf" value=csrfToken)
             input(type="hidden" name="nomisId" value=nomisId || '')
+            input(type="hidden" name="addressIndex" value=addressIndex || '')
             div.pure-g.largePaddingBottom
                 div.pure-u-1.pure-u-sm-5-12.pure-g
                     div.form-group.inline
                         p Does the homeowner/landlord give informed consent to HDC at the address?
 
                         div.multiple-choice(data-target="consentForm")
-                            input#hdcConsentYes(type="radio" checked=review.consent === 'Yes' name="consent" value="Yes")
+                            input#hdcConsentYes(type="radio" checked=address.consent === 'Yes' name="consent" value="Yes")
                             label(for="hdcConsentYes") Yes
                         div.multiple-choice
-                            input#hdcConsentNo(type="radio" checked=review.consent === 'No' name="consent" value="No")
+                            input#hdcConsentNo(type="radio" checked=address.consent === 'No' name="consent" value="No")
                             label(for="hdcConsentNo") No
 
                         div#consentForm.panel.panel-border-narrow.js-hidden
                             div.form-group
                                 p Does the address have an electricity supply?
                                 div.multiple-choice
-                                    input#electricityYes(type="radio" checked=review.electricity === 'Yes' name="electricity" value="Yes")
+                                    input#electricityYes(type="radio" checked=address.electricity === 'Yes' name="electricity" value="Yes")
                                     label(for="electricityYes") Yes
                                 div.multiple-choice
-                                    input#electricityNo(type="radio" checked=review.electricity === 'No' name="electricity" value="No")
+                                    input#electricityNo(type="radio" checked=address.electricity === 'No' name="electricity" value="No")
                                     label(for="electricityNo") No
 
                             div.form-group
                                 p Was a home visit conducted in this case?
                                 div.multiple-choice
-                                    input#homeVisitConductedYes(type="radio" checked=review.homeVisitConducted === 'Yes' name="homeVisitConducted" value="Yes")
+                                    input#homeVisitConductedYes(type="radio" checked=address.homeVisitConducted === 'Yes' name="homeVisitConducted" value="Yes")
                                     label(for="homeVisitConductedYes") Yes
                                 div.multiple-choice
-                                    input#homeVisitConductedNo(type="radio" checked=review.homeVisitConducted === 'No' name="homeVisitConducted" value="No")
+                                    input#homeVisitConductedNo(type="radio" checked=address.homeVisitConducted === 'No' name="homeVisitConducted" value="No")
                                     label(for="homeVisitConductedNo") No
 
             include ../includes/formSubmit
