--- a/server/views/proposedAddress/includes/addressDetail.pug
+++ b/server/views/proposedAddress/includes/addressDetail.pug
@@ -1,7 +1,4 @@
-mixin addressDetail(type, address, review, safety)
-
-    -var addressReview = review || {}
-    -var addressSafety = safety || {}
+mixin addressDetail(type, address)
 
     div.pure-g.smallPaddingBottom(id="addressDetails")
         div.pure-u-1.pure-u-sm-1-2.pure-g
@@ -52,32 +49,32 @@ mixin addressDetail(type, address, review, safety)
                     if address.cautionedAgainstResident
                         p.bold(id="cautioned-"+type) #{address.cautionedAgainstResident}
 
-    if addressReview.consent
+    if address.consent
         div.pure-g.largeMarginTop.paddingTop.smallPaddingBottom.borderTopLight
             div.pure-u-1-2
                 div.pure-u-md-4-5
                     | Does the homeowner/landlord give informed consent to HDC at the address?
-                    p.bold(id="consent-"+type) #{addressReview.consent}
+                    p.bold(id="consent-"+type) #{address.consent}
 
-            if(addressReview.consent === 'Yes')
+            if(address.consent === 'Yes')
                 div.pure-u-1-2
-                    if addressReview.electricity
+                    if address.electricity
                         div.pure-u-md-4-5.midPaddingBottom
                             | Does this address have an electricity supply?
-                            p.bold(id="electricity-"+type) #{addressReview.electricity}
+                            p.bold(id="electricity-"+type) #{address.electricity}
 
-                    if(addressReview.electricity === 'Yes')
-                        if addressReview.homeVisitConducted
+                    if(address.electricity === 'Yes')
+                        if address.homeVisitConducted
                             div.pure-u-md-4-5
                                 | Was a home visit conducted in this case?
-                                p.bold(id="homeVisit-"+type) #{addressReview.homeVisitConducted}
+                                p.bold(id="homeVisit-"+type) #{address.homeVisitConducted}
 
-            if(addressReview.consent === 'Yes' && addressReview.electricity !== 'No')
-                if addressSafety.deemedSafe
+            if(address.consent === 'Yes' && address.electricity !== 'No')
+                if address.deemedSafe
                     div.pure-u-1.largeMarginTop.paddingTop.borderTopLight
                         div.pure-u-md-4-5
                             | Could this offender be managed safely at this address?
-                            p.bold(id="deemedSafe-"+type) #{addressSafety.deemedSafe}
+                            p.bold(id="deemedSafe-"+type) #{address.deemedSafe}
 
             div.pure-u-1-2
 
